@@ -428,6 +428,8 @@ following image formats are supported:
     @tab Only uncompressed GIFs are generated.
 @item BMP          @tab X @tab X
     @tab Microsoft BMP image
+@item BRender PIX  @tab   @tab X
+    @tab Argonaut BRender 3D engine image format.
 @item DPX          @tab X @tab X
     @tab Digital Picture Exchange
 @item JPEG         @tab X @tab X
